<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyBlue"
    tools:context=".WordItemsFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/zur_ck"
        android:backgroundTint="@color/darkBlue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/linlay_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linlay_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" >

        <TextView
            android:id="@+id/tv_wordGER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="9dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="TextView" />

        <TextView
            android:id="@+id/tv_wordEN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="18dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="TextView" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_editItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/bearbeiten_nicht_funktional"
        android:backgroundTint="@color/darkBlueMuted"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linlay_items" />

    <TextView
        android:id="@+id/tv_editGER"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/deutsches_wort"
        android:textColor="@color/darkBlue"
        app:layout_constraintTop_toBottomOf="@id/btn_editItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_editGER">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_editGER"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/platzhalter_keine_funktion_hinterlegt" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_editEN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/englisches_wort"
        android:textColor="@color/darkBlue"
        app:layout_constraintTop_toBottomOf="@id/TIL_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_editEN">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_editEN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/platzhalter_keine_funktion_hinterlegt_2" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>